<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_menuhome"
            android:title="@string/menuhome" />
        <item
            android:id="@+id/menu_test"
            android:icon="@drawable/test"
            android:title="@string/menuTest" />
        <item
            android:id="@+id/menu_recom_ali"
            android:icon="@drawable/diet"
            android:title="Recom. de alimentación" />
        <item
            android:id="@+id/menu_exer"
            android:icon="@drawable/brain"
            android:title="@string/menuEjer" />
        <item
            android:id="@+id/menu_recom_relax"
            android:icon="@drawable/meditation"
            android:title="Recom. de relajación" />
        <item
            android:id="@+id/menu_recom_ejerc"
            android:icon="@drawable/exercise"
            android:title="Recom. de activación física" />
    </group>

    <group android:id="@+id/groupGoOut">
        <item android:title="@string/menuGoOut"
            android:icon="@android:drawable/ic_lock_power_off"
            android:id="@+id/menu_logout"></item>
    </group>
</menu>