<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Relax.RecomExerFragment2">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:text="@string/Exerlogan"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="720dp"
        android:layout_height="188dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/ejerc2" />

    <Button
        android:id="@+id/buttonGoOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_goOut"
        android:textSize="25dp" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_next" />

</RelativeLayout>