<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".activity.Register">

        <ImageView
            android:layout_width="500dp"
            android:layout_height="200dp"
            android:src="@drawable/banner"
            android:layout_gravity="center"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_first_name"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_first_name"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/input_register_hint"
            android:textSize="25sp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_last_name"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/input_register_hint"
            android:textSize="25sp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_last_name_two"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_last_name_two"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/input_register_hint"
            android:textSize="25sp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_username"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/input_register_hint"
            android:textSize="25sp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/input_register_hint"
            android:textSize="25sp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_con_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/input_register_hint"
            android:textSize="25sp"/>


        <!-- Radio Button -->
        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:textColor="@color/input_register">

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:checked="true"
                android:padding="15dp"
                android:text="@string/genderF"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="15dp"
                android:text="@string/genderM"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <!-- Birthdate -->
            <EditText
                android:id="@+id/et_birth_date"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/image_calender"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:hint="Birthdate - dd/mm/yyyy"
                android:inputType="date"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/input_register_hint"
                android:textSize="25sp"/>

            <ImageButton
                android:id="@+id/image_calender"
                android:layout_width="200dp"
                android:layout_height="65dp"
                android:background="@color/white"
                android:src="@drawable/ic_calendar"
                android:tint="@color/colorBlack" />
        </LinearLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#ea4c88"
            android:padding="15dp"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>