<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">



    </RelativeLayout>

            <ImageView
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:src="@drawable/cogni_aim_banner1"
                android:layout_above="@+id/username"
                android:layout_centerHorizontal="true"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:hint="@string/hint_username"
                android:inputType="textVisiblePassword"
                android:padding="20dp"
                android:singleLine="true"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/input_register_bg"
                android:textSize="25sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttonsLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:singleLine="true"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/input_register_bg"
                android:textSize="25sp"/>

        <!-- Login Button -->
        <LinearLayout
            android:id="@+id/buttonsLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/secondaryDarkColor"
                android:padding="15dp"
                android:text="@string/btn_login"
                android:textColor="@color/primaryTextColor"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:textAlignment="center"/>
    </LinearLayout>

</RelativeLayout>