<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.RecomFoodFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/FoodTitle1"
        android:textColor="@color/colorBlack"
        android:textSize="55sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="550dp"
            android:layout_height="250dp"
            android:layout_marginLeft="300dp"
            android:paddingTop="24dp"
            android:text="Coma de preferencia pescado azul ya \nque tiene mayor contenido en omega 3. \nPor ejemplo, atún, sardina, salmón, \ntrucha, cazón, etcétera. \nMínimo 2 veces por semana."
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="425dp"
            android:layout_height="125dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:padding="10sp"
            android:src="@drawable/atun" />

        <ImageView
            android:layout_width="425dp"
            android:layout_height="125dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="0dp"
            android:padding="10sp"
            android:src="@drawable/sardina" />

        <ImageView
            android:layout_width="425dp"
            android:layout_height="125dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="250dp"
            android:padding="10sp"
            android:src="@drawable/salmon" />

        <ImageView
            android:layout_width="425dp"
            android:layout_height="125dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="800dp"
            android:padding="10sp"
            android:src="@drawable/bowlpez" />

        <ImageView
            android:layout_width="425dp"
            android:layout_height="125dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="427dp"
            android:padding="10sp"
            android:src="@drawable/trucha" />

        <Button
            android:id="@+id/btnYT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="375dp"
            android:background="@null"
            android:text="Si quieres saber más beneficios del pescado azul. Da click aquí."
            android:textAllCaps="false"
            android:textColor="@android:color/holo_purple"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonGoOut"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="240dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:padding="25dp"
            android:text="@string/btn_goOut"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="385dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:padding="25dp"
            android:text="@string/btn_next"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>